--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,368 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+@keyframes filter-image {
+  to {
+    filter: hue-rotate(360deg); /*для фильтра на третьей картике*/
+  }
+}
 
 .page {
-  min-inline-size: 320px;
+  min-inline-size: 320px; /*минимальная ширина*/
   min-block-size: 100dvb;
+  font-family: var(--font-main), sans-serif;
+  font-variation-settings: 'wght' var(--weight-main, 400); /*"wght" — это ось вариативного шрифта, отвечающая за жирность*/
+  display: flex;
+  flex-direction: column;
+  background-image: var(--background-image);
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  background-attachment: fixed;/*закрепляет фоновое изображение так, чтобы оно не прокручивалось вместе с контентом страницы*/
+}
+
+/*---------------------header-----------------------------*/
+
+.header {
+  display: flex;
+  justify-content: center;
+  margin: 100px auto;
+  border: 2px solid #000000;
+  background-color: #fff;
+}
+
+.container {
+  inline-size: var(--inline-size); /* этот класс отвечает за ширину контента, в зависимости от ширины экрана*/
+}
+
+
+.header__logo {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: var(--padding-logo);
+  justify-content: center;
+  align-items: center;
+  font-family: var(--font-accent);
+}
+
+.header__title {
+  font-size: var(--font-size_header__title);
+  line-height: 100%;
+}
+
+.header__title-description {
+  font-size: var(--font-size_header__title-description); /*описание заголовка*/
+  text-transform: uppercase;
+}
+
+/*-----------------------------------------cards---------------------------------*/
+
+.cards-list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.card__title {
+  font-family: var(--font-main);
+  font-variation-settings: 'wght' var(--weight-header, 700);
+  font-size: 18px;
+  padding: 4px 10px 4px 10px;
+  text-wrap: balance;
+  border-bottom: 2px solid #000000 ;
+  letter-spacing: 0;
+  line-height: 22px
+}
+
+@media (width < 1440px) {
+.cards-list__item:nth-child(1) .card__description,
+.cards-list__item:nth-child(5) .card__description {
+  border: none;
+}
+}
+
+.card {
+  position: relative;
+  border: 2px solid #000000;
+  display: grid;
+  grid-template-columns: 1fr;
+  background-color: #fff;
+}
+
+.card__image {
+    display: block;
+  object-fit: cover;
+  aspect-ratio: 1/1;
+  width: 100%;
+}
+
+.image_and_label {
+  position: relative;
+  width: 100%;
+  border-bottom: 2px solid #000000;
+}
+
+.card__label {
+  font-family: var(--font-accent);
+  position: absolute;
+  top: 22px;
+  right: 0px;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 100%;
+  padding: 4px 10px 6px 10px;
+  -webkit-text-stroke: 1px #fff; /*обводка текста*/
+  z-index: 2;
+  mix-blend-mode: hard-light;
+  opacity: 50%;
+}
+
+.card__description {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding: 25px 25px 25px;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0;
+  font-family: inherit;
+  border-top: 2px solid #000000;
+}
+
+/*-------------кнопки---------------------------*/
+
+.button {
+  background-color: #fff;
+}
+
+.button__text {
+  font-size: 14px;
+  font-family: var(--font-accent);
+}
+
+.card__like-button {
+   min-inline-size: 130px;
+   /*
+   padding: 9px 0;*/
+  padding: 9px 35px 5px 35px;
+  border: 2px solid #000000;
+}
+
+.form-buttons_like {
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 25px;
+  padding-bottom: 23px;
+}
+
+.button-form-save {
+  padding: 55px 32px 62px 33px;
+   display: flex;
+  justify-content: center;
+} 
+
+.menu-button {
+display: flex;
+  flex-direction: column; 
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 18px;
+  border: 2px solid #000000;
+  min-inline-size: 306px;
+}
+
+.menu-button .floppy {
+  width: 29px;
+  height: 28px;
+}
+
+.card__icon-button {
+  border: none;
+  
+}
+
+/* ------------------------------Стили для модального окна-------------- */
+.modal {
+  position: fixed;
+  inset: 0;
+  margin: auto;
+  padding: 30px 40px;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #000000;
+  max-inline-size: clamp(341px, calc(100vw - 34px), 353px);
+  transition: opacity 0.3s ease-in-out;
+  /*
+  font-family: var(--font-accent);*/
+}
+
+.modal[open] {
+  display: block;
+}
+
+.modal:not([open]) {
+  opacity: 0;
+  pointer-events: none;
+}
+
+body:has(.modal[open]) {
+  overflow: hidden; /* блокировать скролл, когда меню открыто*/
+}
+
+.modal[open]::backdrop {
+  background-color: rgba(0, 0, 0, 0.75);  /*тут еще переделать это из примера взято*/
+  backdrop-filter: blur(10px);
+}
+
+.modal__content {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  column-gap: 20px;
+  margin-bottom: 30px;
+
+}
+
+.text-floppy-save {
+font-weight: 400;
+font-family: var(--font-accent);
+line-height: 1.5;
+text-transform: uppercase;
+font-size: 14px;
+} 
+
+.modal__content .floppy {
+  width: 39px;
+  height: 39px;
+  flex-shrink: 0;
+}
+
+.menu-button-ok {
+  position: relative;
+  display: flex;
+  align-self: center;
+  padding: 10.5px 112.5px;
+  text-transform: uppercase;
+}
+
+/* ----------------------декор-----------*/
+
+@supports(text-stroke: 4px #fff) {
+  .card__label {
+    text-stroke: 1px #fff;
+  }
+} 
+
+/*------------------фильтры----------------------*/
+.filtr-bright {
+    filter: brightness(100%); /*за яркость 1я картинка*/
+}
+
+.filtr-grayscale {
+    filter: grayscale(0.8); /*Делает изображение чёрно-белым 2я картинка*/
+} 
+
+.filtr-hue-rotete{
+animation: filter-image 5s linear infinite; /*смена цветов в анимации 3я картинка*/
+}
+
+.filtr-sepia {
+    filter: sepia(80%); /*Создаёт эффект ретро-фотографии. 4ая картинка*/
+}
+
+.filtr-invert {
+    filter: invert(0.7); /*Фильтр делает негатив изображения, то есть меняет светлые участки на тёмные 5я картинка*/
+}
+.multiple-filter {
+  filter: contrast(1.2) brightness(80%); /*множественный 6ая картинка*/
+}
+
+.blur-filter {
+    filter: blur(2px); /*блюр эффект 7ая картинка*/
+  }
+
+/*-----------------эффекты кнопок--------------*/
+.button {
+  border: 2px solid #000000;
+  cursor: pointer;
+  background-color: #fff;
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.button:focus {
+  outline: none; /*убрали стандартную обводку*/
+}
+
+.button:focus,
+.button:focus-visible {
+  box-shadow: 2px 2px 0 #000000;
+}
+
+.button::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-color: #000;
+  transform: translateX(-100%); /* Начинается вне кнопки */
+  transition: transform 0.5s ease-in-out;
+  z-index: 1; /* Ниже текста */
+}
+
+.button:hover::before {
+  transform: translateX(0); /* Заезжает внутрь */
+}
+
+.button__text {
+  position: relative;
+  z-index: 2; /* Выше псевдоэлемента */
+  mix-blend-mode: difference; /* Меняет цвет при наложении */
+  color: #fff; /* Белый текст */
+}
+
+.card__icon-button {
+  border: none; /*кнопка с сердцем*/
+}
+
+.button:hover
+{}
+
+/* Десктоп: увеличиваем отступы */
+@media (width >= 1440px) {
+  .card__title {
+    padding: 3px 24px 6px 10px;
+  }
+
+  .cards-list__item:nth-child(1) .card__description,
+  .cards-list__item:nth-child(2) .card__description,
+  .cards-list__item:nth-child(5) .card__description,
+  .cards-list__item:nth-child(7) .card__description,
+.cards-list__item:nth-child(8) .card__description {
+  border: none;
+}
+
+.card__label {
+   top: 22px;
+  right: 0px;
+}
+
+.menu-button {
+  flex-direction: row;
+  max-inline-size: 335px;
+  
+}
+
+.menu-button .floppy {
+  width: 21px;
+  height: 21px;
+}
 }
