--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,38 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    /* шрифты*/
+  --font-main: 'Inter', sans-serif;
+  --font-accent: 'PressStart2P', cursive;
+  --weight-main: 400; /*толщина основного текста карточки*/
+  --weight-header: 700; /* толщина заголовка карточки.*/
+  --padding-inline: clamp(0px, 10vw, 370px);/* горизонтальный отступ*/
+  --inline-size: clamp(375px, 80%, 700px); /*700-2*2обводка */
+  --padding-logo: clamp(120px, 10vw, 128px) clamp(14px, 8vw, 120.5px);
+  /*карточка заголовок
+  --pdg-card__titl-top: clamp(4px, 1vw, 3px);
+  --pdg-card__titl-right: clamp(10px, 3vw, 24px);
+  --pdg-card__titl-bottom: clamp(4px, 1vw, 3px);
+  --pdg-card__titl-left: clamp(10px, 2vw, 10px);
+   --padding-card__title: clamp(4px, 1vw, 10px) clamp(3px, 2vw, 10px);*/
+   --font-size_header__title: clamp(49px, 5vw + 1rem, 65px);
+   --font-size_header__title-description: clamp(14px, 1.5vw + 0.5rem, 23px);
+   --background-image: 
+    repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    linear-gradient(
+      to bottom,
+      #e7e7e7 0.01%,
+      #1a1a1a 100%
+    );
+
+    --text-shadow-label:
+}
+
