--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,12 +8,6 @@
   --padding-inline: clamp(0px, 10vw, 370px);/* горизонтальный отступ*/
   --inline-size: clamp(375px, 80%, 700px); /*700-2*2обводка */
   --padding-logo: clamp(120px, 10vw, 128px) clamp(14px, 8vw, 120.5px);
-  /*карточка заголовок
-  --pdg-card__titl-top: clamp(4px, 1vw, 3px);
-  --pdg-card__titl-right: clamp(10px, 3vw, 24px);
-  --pdg-card__titl-bottom: clamp(4px, 1vw, 3px);
-  --pdg-card__titl-left: clamp(10px, 2vw, 10px);
-   --padding-card__title: clamp(4px, 1vw, 10px) clamp(3px, 2vw, 10px);*/
    --font-size_header__title: clamp(49px, 5vw + 1rem, 65px);
    --font-size_header__title-description: clamp(14px, 1.5vw + 0.5rem, 23px);
    --background-image: 
@@ -32,7 +26,17 @@
       #e7e7e7 0.01%,
       #1a1a1a 100%
     );
+    /*кнопки*/
+    --background-color-botton: #fff;
+    --original-text-color: #000;
+    --final-text-color: #fff;
 
-    --text-shadow-label:
+    /*сердечко*/
+    --contour-fill-color: #000; /*цвет контура*/
+    --sparks-fill-color: #ff0000; /*цвет искр*/
+    --core-fill-hover: #000; /*цвет сердцевины при наведении*/
+    --main-body-fill-hover: #000; /* цвет основного тела при наведении*/
+    --core-fill-active: #ff0000; /*цвет сердцевины при нажатии и удержании*/
+    --main-body-fill-active: #ff0000; /* цвет основного тела при нажатии и удержании*/
 }
 
