--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,10 +3,10 @@
     font-family: "Inter";
     src: local('Inter-Variable'),
     url(./Inter-Variable.woff2) format("woff2 supports variations"),
-    url(./Inter-Variable.woff2) format('woff2');
-    font-weight: 400 700; 
+    url(./Inter-Variable.woff2) format('woff2-variations');
+    font-weight: 400 785; 
     font-display: swap;
-}
+  }
 
 @font-face {
   font-family: "PressStart2P";
