--- a/styles/variables.css
+++ b/styles/variables.css
@@ -33,6 +33,7 @@
 
     /*сердечко*/
     --contour-fill-color: #000; /*цвет контура*/
+    --contour-fill-clik: #ff0000; /*цвет контура при клике*/
     --sparks-fill-color: #ff0000; /*цвет искр*/
     --core-fill-hover: #000; /*цвет сердцевины при наведении*/
     --main-body-fill-hover: #000; /* цвет основного тела при наведении*/
