--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,7 +6,7 @@
   --weight-main: 400; /*толщина основного текста карточки*/
   --weight-header: 700; /* толщина заголовка карточки.*/
   --padding-inline: clamp(0px, 10vw, 370px);/* горизонтальный отступ*/
-  --inline-size: clamp(375px, 80%, 700px); /*700-2*2обводка */
+  --inline-size: clamp(320px, 100%, 700px);
   --padding-logo: clamp(120px, 10vw, 128px) clamp(14px, 8vw, 120.5px);
    --font-size_header__title: clamp(49px, 5vw + 1rem, 65px);
    --font-size_header__title-description: clamp(14px, 1.5vw + 0.5rem, 23px);
