--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,8 @@
   --padding-inline: clamp(0px, 10vw, 370px);/* горизонтальный отступ*/
   --inline-size: clamp(320px, 100%, 700px);
   --padding-logo: clamp(120px, 10vw, 128px) clamp(14px, 8vw, 120.5px);
-   --font-size_header__title: clamp(49px, 5vw + 1rem, 65px);
+   --font-size_header__title: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+   /*clamp(49px, 5vw + 1rem, 65px);*/
    --font-size_header__title-description: clamp(14px, 1.5vw + 0.5rem, 23px);
    --background-image: 
     repeating-linear-gradient(
